fix(songrank): last row not aligned fixed

--- a/src/view/FindMusic/ChildView/SongRank/SongRank.less
+++ b/src/view/FindMusic/ChildView/SongRank/SongRank.less
@@ -11,6 +11,5 @@
     display: flex;
     flex-wrap: wrap;
     align-items: center;
-    justify-content: space-between;
   }
 }
